infra/k8s/pgadmin-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-srv
spec:
  type: NodePort
  selector:
    app: pgadmin
  ports:
    - name: pgadmin
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
