infra/k8s/user-pgadmin-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-pgadmin-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-pgadmin
  template:
    metadata:
      labels:
        app: user-pgadmin
    spec:
      containers:
        - name: user-pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pgadmin-data
              mountPath: /data/pgadmin
      volumes:
        - name: pgadmin-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: user-pgadmin-srv
spec:
  type: NodePort
  selector:
    app: user-pgadmin
  ports:
    - name: user-pgadmin
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
